# office-reporting-mcp-kit

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
contracts/: office-reporting-mcp.manifest.json
contracts/examples/: finance-office-reporting.manifest.json
docs/: contract-and-adapter-cn.md  integration-guide-cn.md  security-hardening-cn.md
python/office_reporting/: __init__.py  adapters.py  contracts.py  lifecycle.py  replay.py
skills/office-reporting/: SKILL.md
tests/: test_contracts.py
